# bit-kernel

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
kernel/: Cargo.toml  bootimage-bios-bitten.img  bootimage-uefi-bitten.img
kernel/src/: entropy.rs  legacy_memory_region.rs  level_4_entries.rs  main.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
